hphp/hack/test/typecheck/shape_type.php
<?hh // partial

function f(): shape {
  // UNSAFE
}
